After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791044 - Do not print HTML attachments created by Prefer Plain plugin
Do not print HTML attachments created by Prefer Plain plugin
Status: RESOLVED FIXED
Product: evolution
Classification: Applications
Component: Mailer
3.26.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: evolution-mail-maintainers
Evolution QA team
Depends on:
Blocks:
 
 
Reported: 2017-11-30 20:18 UTC by Kip
Modified: 2019-02-26 17:27 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Kip 2017-11-30 20:18:44 UTC
When printing an email, it is not possible to print exclusively either plain text or HTML version. Printing appears to print both versions in 3.26.1.
Comment 1 Milan Crha 2017-12-04 12:59:22 UTC
Thanks for a bug report. I tried to reproduce this, but no luck. I have printed only the HTML part of the message, not both. It might be some setting you use. Could it be that you have in Edit->Preferences->Mail Preferences->HTML Messages tab->Plain Text Mode section, set to Show suppressed HTML parts as attachments and together with it other than "Show HTML if present", thus you see the plain text part in the preview and an HTML part as an attachment? The print code tries to expand attachments it knows about, thus it can look like it prints both parts.
Comment 2 Kip 2017-12-05 19:05:14 UTC
Thanks Milan. I think you are right. I thought only the rendering in the message window was affected by that setting, but toggling it I see it also affects printing. That solves my problem, though I'd suggest having a hint in the UI that it affects both.
Comment 3 Milan Crha 2019-02-26 12:01:51 UTC
Let's not print HTML attachments created by the Prefer Plain plugin. That will make things similar to the preview, but without the artificial attachments.

Created commit bfa7a38979 in evo master (3.31.92+)
Comment 4 Kip 2019-02-26 17:27:21 UTC
Thank you for your work, Milan.