Bug 791044 - Do not print HTML attachments created by Prefer Plain plugin

Closes https://bugzilla.gnome.org/show_bug.cgi?id=791044